Add Fastlane config

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,7 +1,9 @@
 tap "heroku/brew"
 tap "homebrew/bundle"
+tap "homebrew/cask"
 tap "homebrew/core"
 brew "node"
 brew "postgresql"
 brew "yarn"
 brew "heroku/brew/heroku"
+cask "fastlane"
