--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,6 +3,7 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 brew "node"
+brew "nvm"
 brew "postgresql"
 brew "yarn"
 brew "heroku/brew/heroku"
