Add Redis to Homebrew config

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -5,6 +5,7 @@ tap "homebrew/core"
 brew "node"
 brew "nvm"
 brew "postgresql"
+brew "redis"
 brew "yarn"
 brew "heroku/brew/heroku"
 cask "fastlane"
