Add homebrew/services to start/stop services

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -2,6 +2,7 @@ tap "heroku/brew"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
+tap "homebrew/services"
 brew "node"
 brew "nvm"
 brew "postgresql"
