Add Java env changer

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,6 +3,7 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 tap "homebrew/services"
+brew "jenv"
 brew "node"
 brew "nvm"
 brew "postgresql"
