Add ffmpeg, gnupg, maven to brewfile

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,7 +3,10 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 tap "homebrew/services"
+brew "ffmpeg"
+brew "gnupg"
 brew "jenv"
+brew "maven"
 brew "node"
 brew "nvm"
 brew "postgresql"
