--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,22 +1,39 @@
 {
   "editor.tabSize": 2,
   "window.zoomLevel": 0,
-  "editor.rulers": [80],
-  "eslint.autoFixOnSave": true,
+  "editor.rulers": [
+    80
+  ],
   "workbench.startupEditor": "newUntitledFile",
   "editor.renderWhitespace": "all",
   "editor.renderIndentGuides": false,
   "files.trimTrailingWhitespace": true,
-  "prettier.disableLanguages": ["scss", "c", "json"],
-  "python.jediEnabled": false,
-  "tslint.autoFixOnSave": true,
+  "prettier.disableLanguages": [
+    "scss",
+    "c",
+    "json"
+  ],
   "typescript.updateImportsOnFileMove.enabled": "always",
   "javascript.updateImportsOnFileMove.enabled": "always",
   "gitblame.statusBarMessageFormat": "🔥 ${commit.hash_short,5} <${author.name}>",
   "editor.codeActionsOnSave": {
-    "source.fixAll.tslint": true
+    "source.fixAll": true
   },
   "editor.suggestSelection": "first",
   "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-  "editor.formatOnSave": true
+  "maven.terminal.useJavaHome": true,
+  "org.todoKeywords": [
+    "TODO",
+    "DOING",
+    "DONE",
+    "BLOCKED"
+  ],
+  "extensions.ignoreRecommendations": false,
+  "clojureVSCode.formatOnSave": true,
+  "clojureVSCode.autoStartNRepl": false,
+  "calva.prettyPrintingOptions": {
+    "enabled": false,
+    "printEngine": "pprint",
+    "width": 120
+  }
 }
