Add awscli and inkscape to brewfile

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -4,6 +4,7 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 tap "homebrew/services"
+brew "awscli"
 brew "ffmpeg"
 brew "gnupg"
 brew "jenv"
@@ -15,6 +16,7 @@ brew "postgresql"
 brew "redis", restart_service: true
 brew "shellcheck"
 brew "yarn"
-brew "clojure/tools/clojure", args: ["devel"]
+brew "clojure/tools/clojure"
 brew "heroku/brew/heroku"
 cask "fastlane"
+cask "inkscape"
