Add Blender to be installed via Homebrew

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -19,5 +19,6 @@ brew "shellcheck"
 brew "yarn"
 brew "clojure/tools/clojure"
 brew "heroku/brew/heroku"
+cask "blender"
 cask "fastlane"
 cask "inkscape"
