Update Brewfile deps

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -2,6 +2,7 @@ tap "clojure/tools"
 tap "heroku/brew"
 tap "homebrew/bundle"
 tap "homebrew/cask"
+tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
 brew "awscli"
@@ -14,11 +15,23 @@ brew "maven"
 brew "node"
 brew "nvm"
 brew "postgresql"
+brew "python@3.7"
 brew "redis", restart_service: true
+brew "scc"
 brew "shellcheck"
 brew "yarn"
 brew "clojure/tools/clojure"
 brew "heroku/brew/heroku"
+cask "algodoo"
+cask "audacity"
 cask "blender"
+cask "docker"
 cask "fastlane"
+cask "firefox"
+cask "google-chrome"
 cask "inkscape"
+cask "obs"
+cask "slack"
+cask "spotify"
+cask "viscosity"
+cask "zoom"
