Update homebrew packages

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -5,6 +5,7 @@ tap "homebrew/cask"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
+brew "sqlite"
 brew "awscli"
 brew "harfbuzz"
 brew "ffmpeg"
@@ -17,6 +18,8 @@ brew "nvm"
 brew "postgresql"
 brew "python@3.7"
 brew "redis", restart_service: true
+brew "rust"
+brew "sbt"
 brew "scc"
 brew "shellcheck"
 brew "yarn"
