--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -5,18 +5,21 @@ tap "homebrew/cask"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
+brew "openssl@1.1"
 brew "sqlite"
 brew "awscli"
 brew "harfbuzz"
 brew "ffmpeg"
+brew "pinentry"
 brew "gnupg"
+brew "gnuplot"
 brew "jenv"
 brew "leiningen"
 brew "maven"
 brew "node"
 brew "nvm"
 brew "postgresql"
-brew "python@3.7"
+brew "pyenv"
 brew "redis", restart_service: true
 brew "rust"
 brew "sbt"
@@ -29,11 +32,11 @@ cask "algodoo"
 cask "audacity"
 cask "blender"
 cask "docker"
-cask "fastlane"
 cask "firefox"
 cask "google-chrome"
 cask "inkscape"
 cask "obs"
+cask "obsidian"
 cask "slack"
 cask "spotify"
 cask "viscosity"
