--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,35 +1,17 @@
 {
   "editor.tabSize": 2,
-  "editor.rulers": [
-    80
-  ],
   "workbench.startupEditor": "newUntitledFile",
   "editor.renderWhitespace": "all",
   "editor.renderIndentGuides": false,
   "files.trimTrailingWhitespace": true,
-  "prettier.disableLanguages": [
-    "scss",
-    "c",
-    "json"
-  ],
   "typescript.updateImportsOnFileMove.enabled": "always",
   "javascript.updateImportsOnFileMove.enabled": "always",
-  "gitblame.statusBarMessageFormat": "🔥 ${commit.hash_short,5} <${author.name}>",
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
   "editor.suggestSelection": "first",
-  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-  "maven.terminal.useJavaHome": true,
-  "org.todoKeywords": [
-    "TODO",
-    "DOING",
-    "DONE",
-    "BLOCKED"
-  ],
+  "org.todoKeywords": ["TODO", "DOING", "DONE", "BLOCKED"],
   "extensions.ignoreRecommendations": false,
-  "clojureVSCode.formatOnSave": true,
-  "clojureVSCode.autoStartNRepl": false,
   "calva.prettyPrintingOptions": {
     "enabled": false,
     "printEngine": "pprint",
@@ -61,8 +43,35 @@
     "files.trimTrailingWhitespace": false,
     "editor.matchBrackets": "always",
     "editor.renderIndentGuides": false,
-    "editor.parameterHints.enabled": false,
+    "editor.parameterHints.enabled": false
   },
   "calva.paredit.defaultKeyMap": "none",
-  "calva.evalOnSave": true
+  "calva.evalOnSave": true,
+  "workbench.editorAssociations": {
+    "git-rebase-todo": "default",
+    "*.ipynb": "jupyter-notebook"
+  },
+  "[yaml]": {
+    "editor.defaultFormatter": "redhat.vscode-yaml"
+  },
+  "[sql]": {
+    "editor.formatOnSave": false
+  },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "files.exclude": {
+    "**/output.calva-repl": true
+  },
+  "notebook.cellToolbarLocation": {
+    "default": "right",
+    "jupyter-notebook": "left"
+  },
+  "debug.allowBreakpointsEverywhere": true,
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "files.associations": {
+    "COMMIT_EDITMSG": "git-commit"
+  }
 }
