Add postgresapp to casks

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -38,6 +38,7 @@ cask "google-chrome"
 cask "inkscape"
 cask "obs"
 cask "obsidian"
+cask "postgres-unofficial"
 cask "slack"
 cask "spotify"
 cask "viscosity"
