Add Dart formatter to vscode

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -73,5 +73,8 @@
   },
   "files.associations": {
     "COMMIT_EDITMSG": "git-commit"
+  },
+  "[dart]": {
+    "editor.defaultFormatter": "Dart-Code.dart-code"
   }
 }
