Add most recent dependencies to brew

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -10,6 +10,7 @@ brew "sqlite"
 brew "awscli"
 brew "harfbuzz"
 brew "ffmpeg"
+brew "gh"
 brew "pinentry"
 brew "gnupg"
 brew "gnuplot"
@@ -27,6 +28,7 @@ brew "rust"
 brew "sbt"
 brew "scc"
 brew "shellcheck"
+brew "wireshark", link: false
 brew "yarn"
 brew "clojure/tools/clojure"
 brew "heroku/brew/heroku"
@@ -35,14 +37,19 @@ cask "audacity"
 cask "blender"
 cask "docker"
 cask "firefox"
+cask "flutter"
 cask "google-chrome"
 cask "inkscape"
 cask "obs"
 cask "obsidian"
+cask "openvpn-connect"
 cask "postgres-unofficial"
 cask "slack"
 cask "spotify"
+cask "vcv-rack"
 cask "viscosity"
+cask "wireshark"
+cask "xquartz"
 cask "zoom"
 mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
