--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -7,7 +7,9 @@ tap "homebrew/core"
 tap "homebrew/services"
 brew "openssl@1.1"
 brew "sqlite"
+brew "ansible"
 brew "awscli"
+brew "cocoapods", link: false
 brew "harfbuzz"
 brew "ffmpeg"
 brew "gh"
@@ -19,6 +21,7 @@ brew "jq"
 brew "leiningen"
 brew "mas"
 brew "maven"
+brew "netcat"
 brew "node"
 brew "nvm"
 brew "postgresql"
