Add vscode to brewfile

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -51,6 +51,7 @@ cask "slack"
 cask "spotify"
 cask "vcv-rack"
 cask "viscosity"
+cask "visual-studio-code"
 cask "wireshark"
 cask "xquartz"
 cask "zoom"
