Add setup for new Mac

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -35,12 +35,14 @@ brew "wireshark", link: false
 brew "yarn"
 brew "clojure/tools/clojure"
 brew "heroku/brew/heroku"
+cask "1password"
 cask "algodoo"
 cask "audacity"
 cask "blender"
 cask "docker"
 cask "firefox"
 cask "flutter"
+cask "gimp"
 cask "google-chrome"
 cask "inkscape"
 cask "obs"
