Update installed packages

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -39,6 +39,7 @@ cask "1password"
 cask "algodoo"
 cask "audacity"
 cask "blender"
+cask "discord"
 cask "docker"
 cask "firefox"
 cask "flutter"
@@ -54,9 +55,11 @@ cask "spotify"
 cask "vcv-rack"
 cask "viscosity"
 cask "visual-studio-code"
+cask "vlc"
 cask "wireshark"
 cask "xquartz"
 cask "zoom"
+mas "1Password for Safari", id: 1569813296
 mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
 mas "Keynote", id: 409183694
