--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -10,8 +10,11 @@ brew "sqlite"
 brew "ansible"
 brew "awscli"
 brew "cocoapods", link: false
+brew "coreutils"
+brew "cowsay"
 brew "harfbuzz"
 brew "ffmpeg"
+brew "figlet"
 brew "gh"
 brew "pinentry"
 brew "gnupg"
