--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -49,6 +49,7 @@ cask "flutter"
 cask "gimp"
 cask "google-chrome"
 cask "inkscape"
+cask "maltego"
 cask "obs"
 cask "obsidian"
 cask "openvpn-connect"
