Remove Docker Desktop

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -5,13 +5,17 @@ tap "homebrew/cask"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
+tap "michaeleisel/zld"
 brew "openssl@1.1"
 brew "sqlite"
 brew "ansible"
 brew "awscli"
 brew "cocoapods", link: false
+brew "qemu"
+brew "colima"
 brew "coreutils"
 brew "cowsay"
+brew "docker"
 brew "harfbuzz"
 brew "ffmpeg"
 brew "figlet"
@@ -42,7 +46,6 @@ cask "algodoo"
 cask "audacity"
 cask "blender"
 cask "discord"
-cask "docker"
 cask "firefox"
 cask "flutter"
 cask "gimp"
