--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -56,6 +56,7 @@ cask "maltego"
 cask "obs"
 cask "obsidian"
 cask "openvpn-connect"
+cask "owasp-zap"
 cask "postgres-unofficial"
 cask "slack"
 cask "spotify"
