Add tools for Gitlab testing

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -46,6 +46,8 @@ cask "1password"
 cask "algodoo"
 cask "audacity"
 cask "blender"
+cask "burp-suite"
+cask "codeql"
 cask "discord"
 cask "firefox"
 cask "flutter"
