--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -93,5 +93,6 @@
   "editor.guides.indentation": false,
   "dart.debugExternalPackageLibraries": true,
   "dart.debugSdkLibraries": false,
-  "debug.javascript.autoAttachFilter": "smart"
+  "debug.javascript.autoAttachFilter": "smart",
+  "codeQL.telemetry.enableTelemetry": true
 }
