Update vscode settings and brewfile

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,21 +1,22 @@
 tap "clojure/tools"
+tap "dart-lang/dart"
 tap "heroku/brew"
 tap "homebrew/bundle"
-tap "homebrew/cask"
 tap "homebrew/cask-versions"
-tap "homebrew/core"
 tap "homebrew/services"
 tap "michaeleisel/zld"
-brew "openssl@1.1"
 brew "sqlite"
 brew "ansible"
 brew "awscli"
 brew "cocoapods"
+brew "openssl@1.1"
 brew "qemu"
 brew "colima"
 brew "coreutils"
 brew "cowsay"
 brew "docker"
+brew "docker-buildx"
+brew "docker-compose"
 brew "harfbuzz"
 brew "ffmpeg"
 brew "figlet"
@@ -42,6 +43,7 @@ brew "scc"
 brew "shellcheck"
 brew "wireshark", link: false
 brew "yarn"
+brew "youtube-dl"
 brew "clojure/tools/clojure"
 brew "heroku/brew/heroku"
 cask "1password"
