--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -30,11 +30,13 @@ brew "jadx"
 brew "jenv"
 brew "jq"
 brew "leiningen"
+brew "less"
 brew "mas"
 brew "maven"
 brew "netcat"
 brew "node"
 brew "nvm"
+brew "openvpn"
 brew "postgresql@15"
 brew "pyenv"
 brew "pyenv-virtualenv"
@@ -62,16 +64,17 @@ cask "inkscape"
 cask "maltego"
 cask "obs"
 cask "openvpn-connect"
-cask "owasp-zap"
 cask "postgres-unofficial"
 cask "slack"
 cask "spotify"
+cask "synthesia"
 cask "vcv-rack"
 cask "viscosity"
 cask "visual-studio-code"
 cask "vlc"
 cask "wireshark"
 cask "xquartz"
+cask "zap"
 cask "zoom"
 mas "1Password for Safari", id: 1569813296
 mas "GarageBand", id: 682658836
